fix the bars not being vertically aligned

--- a/theme/css/chrome.css
+++ b/theme/css/chrome.css
@@ -33,6 +33,7 @@ a > .hljs {
 #menu-bar {
     position: relative;
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     background-color: var(--bg);
     border-block-end-color: var(--bg);
@@ -95,8 +96,15 @@ html:not(.js) .left-buttons button {
     display: none;
 }
 
+.left-buttons, .right-buttons {
+    display: flex;
+    align-items: center;
+}
+
 .menu-title {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: 200;
     font-size: 2.4rem;
     line-height: var(--menu-bar-height);
@@ -106,6 +114,10 @@ html:not(.js) .left-buttons button {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.menu-title .logo {
+    display: flex;
+    align-items: center;
 }
 .menu-title {
     cursor: pointer;
